--- a/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/appsettings.json
+++ b/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "CoffeeStore": "Server=localhost;Database=CoffeeStoreDb2;uid=sa;pwd=12345;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtOptions": {
+    "Issuer": "CoffeeStoreIssuer",
+    "Audience": "CoffeeStoreAudience",
+    "SigningKey": "ThisIsASuperSecretSigningKeyForCoffeeStore123!",
+    "AccessTokenExpirationMinutes": 30,
+    "RefreshTokenExpirationDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
