--- a/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/appsettings.json
+++ b/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CoffeeStore": "Server=localhost;Database=CoffeeStoreDb2;uid=sa;pwd=12345;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CoffeeStore": "Server=localhost;Database=CoffeeStoreDb2;User Id=sa;Password=12345;TrustServerCertificate=True;"
   },
   "JwtOptions": {
     "Issuer": "CoffeeStoreIssuer",
