--- a/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/PRN232.Lab2.CoffeeStore.API.csproj
+++ b/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/PRN232.Lab2.CoffeeStore.API.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PRN232.Lab2.CoffeeStore.Services\PRN232.Lab2.CoffeeStore.Services.csproj" />
+    <ProjectReference Include="..\PRN232.Lab2.CoffeeStore.Repositories\PRN232.Lab2.CoffeeStore.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
