--- a/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/appsettings.json
+++ b/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CoffeeStoreDB;uid=sa;pwd=12345; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
