--- a/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.Services/PRN232.Lab2.CoffeeStore.Services.csproj
+++ b/PRN232.Lab2.CoffeeStore/PRN232.Lab2.CoffeeStore.Services/PRN232.Lab2.CoffeeStore.Services.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PRN232.Lab2.CoffeeStore.Repositories\PRN232.Lab2.CoffeeStore.Repositories.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
+  </ItemGroup>
+
 </Project>
